@@ -41,7 +41,7 @@
         can be found <ulink type="help" url="gnome-help:fdl">here</ulink>.
       </para>
       <para>
-        Many of the namezs used by companies to distinguish their products and
+        Many of the names used by companies to distinguish their products and
         services are claimed as trademarks. Where those names appear in any
         GNOME documentation, and those trademarks are made aware to the members
         of the GNOME Documentation Project, the names have been printed in caps
@@ -50,7 +50,7 @@
     </legalnotice>
 
     <releaseinfo>
-      This manual describes version $VERSION; of the GNOME Control Center.
+      This manual describes version &VERSION; of the GNOME Control Center.
     </releaseinfo>
   </articleinfo>
   
