@@ -1,3 +1,7 @@
+2002-03-14  Kevin Breit  <mrproper@ximian.com>
+
+	* C/Makefile.am: Added to cvs.
+	
 2002-03-08  Kevin Breit  <mrproper@ximian.com>
 
 	* C/config-default-apps.xml: Added this file to CVS.
